test/error/JTypeTerm1.t
%typeterm type1 {
  implement { String }
  cmp_fun_sym(s1,s2) { s1.equals(s2) }
  get_subterm(t,n) { null }
  equals(t1,t2) { t1.equals(t2) }
}
